<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".questions.Question2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/start_background"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/backgroundQuest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#C3E9F4">

            <androidx.cardview.widget.CardView
                android:id="@+id/backgroundQuest1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imQuest"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:contentDescription="@string/question"
                        app:srcCompat="@drawable/question" />

                    <TextView
                        android:id="@+id/tvTitle"
                        style="@style/brain_competition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="center"
                        android:text="@string/ques_2"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvDescriptionQuest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="13dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center"
                        android:text="@string/question2" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/answer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#00FFFFFF"
                            android:hint="@string/enter_solution"
                            android:maxLines="1"
                            android:textColorHint="#A75FC6" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageButton
                        android:id="@+id/checkOut"
                        android:layout_width="200dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="#00FFFFFF"
                        android:contentDescription="@string/check_out"
                        android:scaleType="fitXY"
                        android:src="@drawable/btn_check" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/toNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/to_next"
            android:src="@drawable/btn_next"
            android:visibility="gone" />
    </LinearLayout>

</FrameLayout>